--- a/package.json
+++ b/package.json
@@ -22,52 +22,48 @@
     "test:h2o": "cd dist/server && h2o -t -c h2o.config.yaml"
   },
   "dependencies": {
-    "bunyan": "^1.8.5",
+    "bunyan": "^1.8.12",
     "forever": "^0.15.3",
-    "history": "^4.5.1",
+    "history": "^4.7.2",
     "iltorb": "^1.2.1",
     "jsonfile": "^2.4.0",
-    "node-fetch": "^1.6.3",
+    "node-fetch": "^1.7.3",
     "obj-str": "^1.0.0",
     "object-assign-polyfill": "^0.1.0",
     "promise-polyfill": "^6.0.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1",
+    "react": "^16.0.0-rc.3",
+    "react-dom": "^16.0.0-rc.3",
+    "react-router-dom": "^4.2.2",
     "restify": "^4.3.0",
-    "shrink-ray": "^0.1.3",
     "unfetch": "^2.1.2",
     "useragent": "^2.1.12",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "babel-cli": "7.0.0-alpha.9",
-    "babel-core": "7.0.0-alpha.9",
-    "babel-loader": "7.0.0",
-    "babel-plugin-transform-es2015-block-scoping": "v7.0.0-alpha.9",
-    "babel-plugin-transform-react-jsx": "7.0.0-alpha.9",
-    "babel-preset-env": "2.0.0-alpha.7",
-    "babili": "^0.0.12",
-    "babili-webpack-plugin": "^0.0.11",
-    "brotli-webpack-plugin": "^0.3.0",
-    "browserslist": "^1.7.7",
+    "babel-cli": "7.0.0-alpha.18",
+    "babel-core": "7.0.0-alpha.18",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-block-scoping": "v7.0.0-alpha.18",
+    "babel-plugin-transform-react-jsx": "7.0.0-alpha.18",
+    "babel-preset-env": "2.0.0-alpha.19",
+    "babili": "^0.1.4",
+    "babili-webpack-plugin": "^0.1.2",
+    "brotli-webpack-plugin": "^0.4.1",
+    "browserslist": "^2.4.0",
     "bundle-loader": "^0.5.5",
-    "compression-webpack-plugin": "^0.4.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.4",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "node-zopfli": "^2.0.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "nodemon": "^1.11.0",
     "object.values": "^1.0.4",
-    "offline-plugin": "^4.7.0",
+    "offline-plugin": "^4.8.3",
     "optimize-js-plugin": "^0.0.4",
-    "postcss-loader": "^1.3.3",
-    "postcss-modules": "^0.6.4",
-    "style-loader": "^0.16.1",
-    "url-polyfill": "^1.0.4",
-    "webpack": "^2.4.1",
+    "postcss-loader": "^2.0.6",
+    "postcss-modules": "^0.8.0",
+    "style-loader": "^0.18.2",
+    "url-polyfill": "^1.0.7",
+    "webpack": "^3.5.6",
     "webpack-cleanup-plugin": "^0.5.1"
   }
 }
