--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "start:h2o": "cd dist/server && h2o -c h2o.config.yaml",
     "bundle:dev": "BUNDLE_ENV=dev yarn run bundle:chrome; yarn run bundle:server",
     "bundle:all": "yarn run bundle:chrome; yarn run bundle:safari; yarn run bundle:edge; yarn run bundle:firefox; yarn run bundle:fallback; yarn run bundle:server",
-    "bundle:chrome": "BABEL_ENV=build.chrome node_modules/.bin/webpack --config config/webpack.chrome.js --json > dist/chrome/webpack.json",
-    "bundle:safari": "BABEL_ENV=build.safari node_modules/.bin/webpack --config config/webpack.safari.js --json > dist/safari/webpack.json",
-    "bundle:edge": "BABEL_ENV=build.edge node_modules/.bin/webpack --config config/webpack.edge.js --json > dist/edge/webpack.json",
-    "bundle:firefox": "BABEL_ENV=build.firefox node_modules/.bin/webpack --config config/webpack.firefox.js --json > dist/firefox/webpack.json",
-    "bundle:fallback": "BABEL_ENV=build.fallback node_modules/.bin/webpack --config config/webpack.fallback.js --json > dist/fallback/webpack.json",
-    "bundle:server": "BABEL_ENV=build.server node_modules/.bin/webpack --config config/webpack.server.js --json > dist/server/webpack.json",
-    "bundle:prod": "cross-env NODE_ENV=production yarn run bundle:all;",
+    "bundle:chrome": "BABEL_ENV=chrome node_modules/.bin/webpack --config config/webpack.chrome.js --json > dist/chrome/webpack.json",
+    "bundle:safari": "BABEL_ENV=safari node_modules/.bin/webpack --config config/webpack.safari.js --json > dist/safari/webpack.json",
+    "bundle:edge": "BABEL_ENV=edge node_modules/.bin/webpack --config config/webpack.edge.js --json > dist/edge/webpack.json",
+    "bundle:firefox": "BABEL_ENV=firefox node_modules/.bin/webpack --config config/webpack.firefox.js --json > dist/firefox/webpack.json",
+    "bundle:fallback": "BABEL_ENV=fallback node_modules/.bin/webpack --config config/webpack.fallback.js --json > dist/fallback/webpack.json",
+    "bundle:server": "BABEL_ENV=server node_modules/.bin/webpack --config config/webpack.server.js --json > dist/server/webpack.json",
+    "bundle:prod": "NODE_ENV=production yarn run bundle:all;",
     "test:h2o": "cd dist/server && h2o -t -c h2o.config.yaml"
   },
   "dependencies": {
@@ -43,6 +43,7 @@
     "babel-cli": "7.0.0-alpha.18",
     "babel-core": "7.0.0-alpha.18",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "v7.0.0-alpha.18",
     "babel-plugin-transform-es2015-block-scoping": "v7.0.0-alpha.18",
     "babel-plugin-transform-react-jsx": "7.0.0-alpha.18",
     "babel-preset-env": "2.0.0-alpha.19",
