--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "obj-str": "^1.0.0",
     "object-assign-polyfill": "^0.1.0",
     "promise-polyfill": "^6.0.2",
-    "react": "^16.0.0-rc.3",
-    "react-dom": "^16.0.0-rc.3",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "restify": "^4.3.0",
     "unfetch": "^2.1.2",
